--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/SOS_DOS_Plots.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/SOS_DOS_Plots.ipynb
@@ -878,6 +878,158 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Acres</th>\n",
+       "      <th>county</th>\n",
+       "      <th>CropGrp</th>\n",
+       "      <th>CropTyp</th>\n",
+       "      <th>DataSrc</th>\n",
+       "      <th>ExctAcr</th>\n",
+       "      <th>IntlSrD</th>\n",
+       "      <th>Irrigtn</th>\n",
+       "      <th>LstSrvD</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RtCrpTy</th>\n",
+       "      <th>Shap_Ar</th>\n",
+       "      <th>Shp_Lng</th>\n",
+       "      <th>TRS</th>\n",
+       "      <th>image_year</th>\n",
+       "      <th>SF_year</th>\n",
+       "      <th>doy</th>\n",
+       "      <th>EVI</th>\n",
+       "      <th>human_system_start_time</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>101994_WSDA_SF_2017</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>Grant</td>\n",
+       "      <td>Vegetable</td>\n",
+       "      <td>pea, green</td>\n",
+       "      <td>wsda</td>\n",
+       "      <td>141.996801</td>\n",
+       "      <td>2003/07/01</td>\n",
+       "      <td>center pivot</td>\n",
+       "      <td>2017/05/20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Buckwheat</td>\n",
+       "      <td>574640.664088</td>\n",
+       "      <td>2828.521582</td>\n",
+       "      <td>T14R25E19</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.0373171</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>101994_WSDA_SF_2017</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>Grant</td>\n",
+       "      <td>Vegetable</td>\n",
+       "      <td>pea, green</td>\n",
+       "      <td>wsda</td>\n",
+       "      <td>141.996801</td>\n",
+       "      <td>2003/07/01</td>\n",
+       "      <td>center pivot</td>\n",
+       "      <td>2017/05/20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Buckwheat</td>\n",
+       "      <td>574640.664088</td>\n",
+       "      <td>2828.521582</td>\n",
+       "      <td>T14R25E19</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-0.00834155</td>\n",
+       "      <td>2017-01-11</td>\n",
+       "      <td>2017-01-11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     ID  Acres county    CropGrp     CropTyp DataSrc  \\\n",
+       "15  101994_WSDA_SF_2017  142.0  Grant  Vegetable  pea, green    wsda   \n",
+       "16  101994_WSDA_SF_2017  142.0  Grant  Vegetable  pea, green    wsda   \n",
+       "\n",
+       "       ExctAcr     IntlSrD       Irrigtn     LstSrvD  ...    RtCrpTy  \\\n",
+       "15  141.996801  2003/07/01  center pivot  2017/05/20  ...  Buckwheat   \n",
+       "16  141.996801  2003/07/01  center pivot  2017/05/20  ...  Buckwheat   \n",
+       "\n",
+       "          Shap_Ar      Shp_Lng        TRS image_year SF_year  doy         EVI  \\\n",
+       "15  574640.664088  2828.521582  T14R25E19       2017    2017    1  -0.0373171   \n",
+       "16  574640.664088  2828.521582  T14R25E19       2017    2017   11 -0.00834155   \n",
+       "\n",
+       "   human_system_start_time       Date  \n",
+       "15              2017-01-01 2017-01-01  \n",
+       "16              2017-01-11 2017-01-11  \n",
+       "\n",
+       "[2 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_regularized_TS.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas._libs.tslibs.timestamps.Timestamp"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(clean_regularized_TS.loc[15, 'Date'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
