before adding season count column to SEOS tables

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/SOS_DOS_Plots.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/SOS_DOS_Plots.ipynb
@@ -1876,10 +1876,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SG_params = 51\n",
+    "print (SG_params % 10 )\n",
+    "int(SG_params / 10)"
+   ]
   },
   {
    "cell_type": "code",
