--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/test_SOS_plot_Aeolus.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/test_SOS_plot_Aeolus.ipynb
@@ -76,13 +76,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir = \"/Users/hn/Documents/01_research_data/remote_sensing/test_aeolus_outputs/\"\n",
     "f_name = \"01_Regular_filledGap_Grant_SF_2017_EVI.csv\"\n",
     "a_df = pd.read_csv(data_dir + f_name, low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2016-07-31'"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_df.loc[0, 'Date']"
    ]
   },
   {
@@ -375,26 +395,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['ID', 'Acres', 'county', 'CropGrp', 'CropTyp', 'DataSrc', 'ExctAcr',\n",
-       "       'IntlSrD', 'Irrigtn', 'LstSrvD', 'Notes', 'RtCrpTy', 'Shap_Ar',\n",
-       "       'Shp_Lng', 'TRS', 'image_year', 'SF_year', 'doy', 'EVI',\n",
-       "       'human_system_start_time', 'Date', 'system_start_time'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SG_win_size is 10 and SG_order is 100.\n"
+     ]
     }
    ],
    "source": [
-    "curr_field.columns"
+    "print(\"SG_win_size is {} and SG_order is {}.\".format(10, 100))"
    ]
   },
   {
@@ -627,22 +640,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "0.8476371878086512"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(SOS_tb)"
+    "max(y_orchard[\"EVI\"]) - min(y_orchard[\"EVI\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_orchard = crr_fld[crr_fld['doy']>= 122]\n",
+    "y_orchard = y_orchard[y_orchard['doy'] <=305]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Acres</th>\n",
+       "      <th>county</th>\n",
+       "      <th>CropGrp</th>\n",
+       "      <th>CropTyp</th>\n",
+       "      <th>DataSrc</th>\n",
+       "      <th>ExctAcr</th>\n",
+       "      <th>IntlSrD</th>\n",
+       "      <th>Irrigtn</th>\n",
+       "      <th>LstSrvD</th>\n",
+       "      <th>...</th>\n",
+       "      <th>image_year</th>\n",
+       "      <th>SF_year</th>\n",
+       "      <th>doy</th>\n",
+       "      <th>EVI</th>\n",
+       "      <th>human_system_start_time</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>system_start_time</th>\n",
+       "      <th>EVI_ratio</th>\n",
+       "      <th>SOS</th>\n",
+       "      <th>EOS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>485637</th>\n",
+       "      <td>105675_WSDA_SF_2017</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>Grant</td>\n",
+       "      <td>Vegetable</td>\n",
+       "      <td>corn, sweet</td>\n",
+       "      <td>wsda</td>\n",
+       "      <td>135.282707</td>\n",
+       "      <td>2003/07/01</td>\n",
+       "      <td>center pivot</td>\n",
+       "      <td>2017/10/17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.033386</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>1483311800000</td>\n",
+       "      <td>0.051506</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>485638</th>\n",
+       "      <td>105675_WSDA_SF_2017</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>Grant</td>\n",
+       "      <td>Vegetable</td>\n",
+       "      <td>corn, sweet</td>\n",
+       "      <td>wsda</td>\n",
+       "      <td>135.282707</td>\n",
+       "      <td>2003/07/01</td>\n",
+       "      <td>center pivot</td>\n",
+       "      <td>2017/10/17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.004376</td>\n",
+       "      <td>2017-01-11</td>\n",
+       "      <td>2017-01-11</td>\n",
+       "      <td>1484175800000</td>\n",
+       "      <td>0.021515</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         ID  Acres county    CropGrp      CropTyp DataSrc  \\\n",
+       "485637  105675_WSDA_SF_2017  135.0  Grant  Vegetable  corn, sweet    wsda   \n",
+       "485638  105675_WSDA_SF_2017  135.0  Grant  Vegetable  corn, sweet    wsda   \n",
+       "\n",
+       "           ExctAcr     IntlSrD       Irrigtn     LstSrvD  ... image_year  \\\n",
+       "485637  135.282707  2003/07/01  center pivot  2017/10/17  ...       2017   \n",
+       "485638  135.282707  2003/07/01  center pivot  2017/10/17  ...       2017   \n",
+       "\n",
+       "       SF_year  doy       EVI human_system_start_time       Date  \\\n",
+       "485637    2017    1  0.033386              2017-01-01 2017-01-01   \n",
+       "485638    2017   11  0.004376              2017-01-11 2017-01-11   \n",
+       "\n",
+       "        system_start_time  EVI_ratio  SOS  EOS  \n",
+       "485637      1483311800000   0.051506  0.0  0.0  \n",
+       "485638      1484175800000   0.021515  0.0  0.0  \n",
+       "\n",
+       "[2 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crr_fld.head(2)"
    ]
   },
   {
@@ -670,8 +825,8 @@
     "ax.plot(curr_field['Date'], SG_pred, c='k', label=\"smoothed EVI\")\n",
     "ax.scatter(curr_field['Date'], SG_pred, marker='o', s=2, c='k')\n",
     "\n",
-    "ax.scatter(SOS_tb['Date'], SOS_tb['SOS'] , marker='+', s=40, c='g')\n",
-    "ax.scatter(EOS_tb['Date'], EOS_tb['EOS'] , marker='+', s=40, c='r')\n",
+    "ax.scatter(SOS_tb['Date'], SOS_tb['SOS'], marker='+', s=40, c='g')\n",
+    "ax.scatter(EOS_tb['Date'], EOS_tb['EOS'], marker='+', s=40, c='r')\n",
     "\n",
     "\n",
     "ax.axhline(0.5 , color = 'r', linewidth=.5)\n",
@@ -707,27 +862,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ID', 'Acres', 'county', 'CropGrp', 'CropTyp', 'DataSrc', 'ExctAcr',\n",
-       "       'IntlSrD', 'Irrigtn', 'LstSrvD', 'Notes', 'RtCrpTy', 'Shap_Ar',\n",
-       "       'Shp_Lng', 'TRS', 'image_year', 'SF_year', 'doy', 'EVI',\n",
-       "       'human_system_start_time', 'Date', 'system_start_time', 'EVI_ratio',\n",
-       "       'SOS', 'EOS'],\n",
-       "      dtype='object')"
+       "pandas._libs.tslibs.timestamps.Timestamp"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "EOS_tb.columns"
+    "EOS_tb.Date.iloc[0]"
    ]
   },
   {
@@ -1034,31 +1184,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 51"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int(93 / 10)"
-   ]
   },
   {
    "cell_type": "code",
