--- a/remote_sensing/python/Local_Jupyter_NoteBooks/confusion_SOS_separateCountyYear.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/confusion_SOS_separateCountyYear.ipynb
@@ -2823,38 +2823,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "WSDA_DataTable = pd.read_csv(SF_data_dir + \"WSDA_DataTable_\" + str(2017) + \".csv\")\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = \"/Users/hn/Documents/00_GitHub/Ag/remote_sensing/python/drivers/05_confusionTables/01_merge_tables/\"\n",
+    "A = pd.read_csv(data_dir + \"allCounties_2016_confusion.csv\")\n",
+    "B = pd.read_csv(data_dir + \"allCounties_separate_2016_confusion.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Clallam', 'Jefferson', 'Snohomish', 'San Juan', 'Island', 'King',\n",
-       "       'Lewis', 'Cowlitz', 'Clark', 'Whatcom', 'Skagit', 'Grays Harbor',\n",
-       "       'Pacific', 'Thurston', 'Pierce', 'Mason', 'Wahkiakum', 'Skamania',\n",
-       "       'Kitsap', 'Asotin', 'Garfield', 'Columbia', 'Walla Walla',\n",
-       "       'Whitman', 'Ferry', 'Stevens', 'Pend Oreille', 'Spokane', 'Grant',\n",
-       "       'Adams', 'Lincoln', 'Douglas', 'Franklin', 'Okanogan', 'Benton',\n",
-       "       'Chelan', 'Kittitas', 'Klickitat', 'Yakima'], dtype=object)"
+       "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "WSDA_DataTable.county.unique()"
+    "A.equals(B)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
