--- a/remote_sensing/python/Local_Jupyter_NoteBooks/fuck.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/fuck.ipynb
@@ -445,6 +445,56 @@
     "output.to_csv(filename, index = False)\n",
     "del(output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jumps = \"no\"\n",
+    "SF_year = 2017\n",
+    "output_base = \"a/\"\n",
+    "output_Irr = \"Irr\"\n",
+    "indeks = \"EVI\"\n",
+    "sos_thresh = 0.4\n",
+    "eos_thresh = 0.4\n",
+    "regular_data_dir = \"100\"\n",
+    "given_county = \"Grant\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if jumps == \"yes\":\n",
+    "    regular_output_dir = output_base + \"/2Yrs_plots_70Cloud_Regular_wJumps/\" + \\\n",
+    "                         str(SF_year) + \"_regular_\" + output_Irr + \"_\" + indeks + \\\n",
+    "                         \"_SOS\" + str(int(sos_thresh*10))+ \"_EOS\" + str(int(eos_thresh*10)) + \"/\"\n",
+    "else:\n",
+    "    regular_data_dir = regular_data_dir + \"/noJump_Regularized/\"\n",
+    "    regular_output_dir = output_base + \"/2Yrs_plots_70Cloud_Regular_noJumps/\" + \\\n",
+    "                         str(SF_year) + \"_regular_\" + output_Irr + \"_\" + indeks + \\\n",
+    "                         \"_SOS\" + str(int(sos_thresh*10)) + \"_EOS\" + str(int(eos_thresh*10)) + \"/\"\n",
+    "\n",
+    "    f_name = \"01_Regular_filledGap_\" + given_county + \"_SF_\" + str(SF_year) + \"_\" + indeks + \".csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
