--- a/remote_sensing/python/Local_Jupyter_NoteBooks/fuck.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/fuck.ipynb
@@ -495,6 +495,264 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "A = \"/Users/hn/Documents/01_research_data/remote_sensing/\" + \\\n",
+    "    \"01_NDVI_TS/70_Cloud/00_Eastern_WA_withYear/2Years/\" + \\\n",
+    "    \"04_Regular_plt_tbl_SOSEOS/confusions_70Cloud_SEOS0.5/\" + \\\n",
+    "    \"EVI_PereOut_NASSin_JustIrr_dblNotFiltered_confusion_Acr_morethan2seasons_regular/\" + \\\n",
+    "    \"allCounties_separate_2016_confusion.csv\"\n",
+    "\n",
+    "A = pd.read_csv(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eastern_confusion = A.groupby(['parameters']).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual_2_pred_2</th>\n",
+       "      <th>actual_2_pred_Not2</th>\n",
+       "      <th>actual_Not2_pred_2</th>\n",
+       "      <th>actual_Not2_pred_Not2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>parameters</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>[5, 1]</th>\n",
+       "      <td>8714.76</td>\n",
+       "      <td>17439.52</td>\n",
+       "      <td>105751.22</td>\n",
+       "      <td>705202.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>[5, 3]</th>\n",
+       "      <td>9528.23</td>\n",
+       "      <td>16626.05</td>\n",
+       "      <td>141943.79</td>\n",
+       "      <td>669009.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>[7, 3]</th>\n",
+       "      <td>10144.48</td>\n",
+       "      <td>16009.80</td>\n",
+       "      <td>142171.67</td>\n",
+       "      <td>668781.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>[9, 3]</th>\n",
+       "      <td>10345.40</td>\n",
+       "      <td>15808.89</td>\n",
+       "      <td>134406.76</td>\n",
+       "      <td>676546.64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            actual_2_pred_2  actual_2_pred_Not2  actual_Not2_pred_2  \\\n",
+       "parameters                                                            \n",
+       "[5, 1]              8714.76            17439.52           105751.22   \n",
+       "[5, 3]              9528.23            16626.05           141943.79   \n",
+       "[7, 3]             10144.48            16009.80           142171.67   \n",
+       "[9, 3]             10345.40            15808.89           134406.76   \n",
+       "\n",
+       "            actual_Not2_pred_Not2  \n",
+       "parameters                         \n",
+       "[5, 1]                  705202.20  \n",
+       "[5, 3]                  669009.60  \n",
+       "[7, 3]                  668781.73  \n",
+       "[9, 3]                  676546.64  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eastern_confusion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnss = A.columns[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eastern_confusion = eastern_confusion[columnss]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>parameters</th>\n",
+       "      <th>actual_2_pred_2</th>\n",
+       "      <th>actual_2_pred_Not2</th>\n",
+       "      <th>actual_Not2_pred_2</th>\n",
+       "      <th>actual_Not2_pred_Not2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>parameters</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>[5, 1]</th>\n",
+       "      <td>[5, 1]</td>\n",
+       "      <td>8714.76</td>\n",
+       "      <td>17439.52</td>\n",
+       "      <td>105751.22</td>\n",
+       "      <td>705202.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>[5, 3]</th>\n",
+       "      <td>[5, 3]</td>\n",
+       "      <td>9528.23</td>\n",
+       "      <td>16626.05</td>\n",
+       "      <td>141943.79</td>\n",
+       "      <td>669009.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>[7, 3]</th>\n",
+       "      <td>[7, 3]</td>\n",
+       "      <td>10144.48</td>\n",
+       "      <td>16009.80</td>\n",
+       "      <td>142171.67</td>\n",
+       "      <td>668781.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>[9, 3]</th>\n",
+       "      <td>[9, 3]</td>\n",
+       "      <td>10345.40</td>\n",
+       "      <td>15808.89</td>\n",
+       "      <td>134406.76</td>\n",
+       "      <td>676546.64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           parameters  actual_2_pred_2  actual_2_pred_Not2  \\\n",
+       "parameters                                                   \n",
+       "[5, 1]         [5, 1]          8714.76            17439.52   \n",
+       "[5, 3]         [5, 3]          9528.23            16626.05   \n",
+       "[7, 3]         [7, 3]         10144.48            16009.80   \n",
+       "[9, 3]         [9, 3]         10345.40            15808.89   \n",
+       "\n",
+       "            actual_Not2_pred_2  actual_Not2_pred_Not2  \n",
+       "parameters                                             \n",
+       "[5, 1]               105751.22              705202.20  \n",
+       "[5, 3]               141943.79              669009.60  \n",
+       "[7, 3]               142171.67              668781.73  \n",
+       "[9, 3]               134406.76              676546.64  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eastern_confusion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
