added a plotting function for granularity

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/fine_granularity_table_1.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/scratches_to_experiment/fine_granularity_table_1.ipynb
@@ -50,7 +50,7 @@
     "sys.path.append('/Users/hn/Documents/00_GitHub/Ag/remote_sensing/python/')\n",
     "\n",
     "import remote_sensing_core as rc\n",
-    "import remote_sensing_core as rcp\n",
+    "import remote_sensing_plot_core as rcp\n",
     "\n",
     "data_dir = \"/Users/hn/Documents/01_research_data/remote_sensing/test_Aeolus_data/\"\n",
     "f_name = \"01_Regular_filledGap_Grant_SF_2017_EVI.csv\"\n"
